# need-for-speed

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark.py
kernels/gemm/mojo/: wrapper.py
kernels/gemm/mojo/kernels/: matmul.mojo  matmul_naive.mojo
kernels/gemm/triton/: wrapper.py
kernels/gemm/triton/kernels/: matmul.py
scripts/: run_benchmark.sh  run_test.sh  setup_dev.sh
tests/: conftest.py  test_mojo_gemm.py  test_triton_gemm.py
